# repro-icr

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
experiments/: run-additional-exp.sh  run-full-exp.sh  run-initial-run.sh
results/output-additional-exp/: table_all.csv  tex-result-3var-causal.txt  tex-result-3var-noncausal.txt  tex-result-5var-nonlinear.txt  tex-result-ce.txt
results/output-additional-exp/3var-nc/: resultss.csv
results/output-additional-exp/5var-nl/: invs_resultss.csv  resultss.csv
results/output-additional-exp/5var-skill/: invs_resultss.csv
results/output-additional-exp/7var-covid/: invs_resultss.csv  resultss.csv
results/output-author-run/: table_all.csv  tex-result-3var-causal.txt  tex-result-3var-noncausal.txt  tex-result-5var-skill.txt  tex-result-7var-covid.txt  tex-result-ce.txt
results/output-author-run/3var-c/: invs_resultss.csv  resultss.csv
results/output-author-run/3var-nc/: invs_resultss.csv  resultss.csv
results/output-author-run/5var-skill/: invs_resultss.csv  resultss.csv
results/output-author-run/7var-covid/: resultss.csv  (+1 more)
results/output-full-exp/: table_all.csv  tex-result-5var-nonlinear.txt  tex-result-5var-skill.txt  tex-result-7var-covid.txt  tex-result-ce.txt
results/output-initial-run/: table_all.csv  tex-result-3var-causal.txt  tex-result-3var-noncausal.txt  tex-result-5var-skill.txt  tex-result-7var-covid.txt  tex-result-ce.txt
scripts/: compile-folder.py  eval_acceptance_rates.py  plots.py  prevspost.py  run_experiments.py  visualize_datasets.py
src/mcr/: utils.py
(+14671 files in other folders)
