[tool.poetry]
name = "mcr"
version = "0.1.0"
description = ""
authors = ["repro <repro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12.dev0"
deap = "1.3.2"
matplotlib = "3.5.1"
networkx = "2.6.3"
pandas = "1.3.5"
scipy = "1.9.2"
seaborn = "0.11.2"
tqdm = "4.62.3"
torch = "^2.1.2"
pyro-ppl = "^1.8.6"
scikit-learn = "^1.3.2"
dill = "^0.3.7"
jax = "^0.4.23"
polars = "^0.20.4"
numpyro = "^0.13.2"
jaxlib = "^0.4.23"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.8.0"
wandb = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Dev tools setup

[tool.flake8]
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''
max_line_length = 99
max-complexity = 18

[tool.black]
line-length = 99
preview = true
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
  | condaenv
)/
'''

[tool.isort]
profile = "black"
line_length = 99

[tool.poetry2conda]
name = "fact-icr"
